// Vitest Snapshot v1

exports[`add todos 1`] = `
<div>
  <ul>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
  </ul>
  <p />
  <input />
  <button>
    add
  </button>
</div>
`;

exports[`add todos 2`] = `
<div>
  <ul>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
  </ul>
  <p>
    baz
  </p>
  <input />
  <button>
    add
  </button>
</div>
`;

exports[`add todos 3`] = `
<div>
  <ul>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
    <li>
      baz
    </li>
  </ul>
  <p>
    
  </p>
  <input />
  <button>
    add
  </button>
</div>
`;

exports[`renders 1`] = `
<div>
  <ul>
    <li>
      foo
    </li>
    <li>
      bar
    </li>
  </ul>
  <p />
  <input />
  <button>
    add
  </button>
</div>
`;
